Sun May 13 17:24:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/AMH/Sink_Server/Client_Task.h:
        * examples/AMH/Sink_Server/Client_Task.cpp:
          Use ACE_High_Res_Timer::global_scale_factor_type

Sun May 13 17:22:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Kokyu_dsrt_schedulers/Task_Stats.h:
        * examples/Kokyu_dsrt_schedulers/Task_Stats.cpp:
        * examples/Kokyu_dsrt_schedulers/fp_example/server.cpp:
        * examples/Kokyu_dsrt_schedulers/mif_example/server.cpp:
        * examples/Kokyu_dsrt_schedulers/muf_example/server.cpp:
        * examples/RTScheduling/DT_Creator.h:
        * orbsvcs/performance-tests/RTEvent/lib/Client_Group.h:
        * orbsvcs/performance-tests/RTEvent/lib/Client_Group.cpp:
        * orbsvcs/performance-tests/RTEvent/lib/Client_Pair.h:
        * orbsvcs/performance-tests/RTEvent/lib/Client_Pair.cpp:
        * orbsvcs/performance-tests/RTEvent/lib/Consumer.h:
        * orbsvcs/performance-tests/RTEvent/lib/Consumer.cpp:
        * orbsvcs/tests/EC_Throughput/ECT_Consumer.h:
        * orbsvcs/tests/EC_Throughput/ECT_Consumer.cpp:
        * orbsvcs/tests/EC_Throughput/ECT_Supplier.h:
        * orbsvcs/tests/EC_Throughput/ECT_Supplier.cpp:
        * orbsvcs/tests/Notify/lib/Task_Stats.h:
          Use ACE_High_Res_Timer::global_scale_factor_type

Sun May 13 12:48:34 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/rlecompressor.mpb:
          Reorder base projects

        * TAO_IDL/be/be_visitor_native/native_ch.cpp:
          Layout chage

        * examples/AMH/Sink_Server/Client_Task.cpp:
        * examples/Load_Balancing_persistent/Identity_Client.cpp:
        * examples/Load_Balancing_persistent/Load_Balancer_i.cpp:
        * examples/RTCORBA/Activity/Thread_Task.cpp:
        * examples/RTScheduling/DT_Creator.h:
        * orbsvcs/examples/Notify/ThreadPool/Consumer.cpp: